--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ BETTER_AUTH_URL=http://localhost:3001 # Base URL of your app
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL=""
